--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,19 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: stable
+    rev: 21.5b1
     hooks:
       - id: black
         language_version: python3.7
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.18.1
+    hooks:
+      - id: pyupgrade
   - repo: https://github.com/pycqa/isort
-    rev: 5.5.3
+    rev: 5.8.0
     hooks:
       - id: isort
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.4
+    rev: 3.9.2
     hooks:
       - id: flake8
         verbose: true
